@@ -105,6 +105,7 @@ Corregido los tiempos de los códigos de operación CP (HL), CP (IX+d), CP (IY+d
 Corregido un error en ZRCP al manejar conexiones simultáneas.
 Corregida la lectura/escritura al hacer rollover en Betadisk (gracias Mak7ym). Carga fija por ejemplo de: BR_DEA7H, HOMER, PARADISE
 Corregido fallo al grabar la información de Clip Windows de Spectrum Next en snapshots ZSF
+Corregido fallo al cargar snapshots .nex snapshots con diferente cabecera mayúsculas/minúsculas (por ejemplo Exploding Fist Next)
 Corregida lectura del kempston mouse cuando el menú está abierto
 Corregido tamaño de zona memoria rom en ZX80 y ZX81
 
