@@ -302,6 +302,10 @@ que si se conmuta a otra ventana, la tecla alt ni se leerá...
 Mascaras eventos: ninguna parece capturar cambio ventana: https://tronche.com/gui/x/xlib/events/processing-overview.html#FocusChangeMask
 Con SDL por ejemplo también sucede
 
+-Exploding fist next:
+*cargando desde browser de next, sale la intro y luego se cuelga
+*cargando con smartload, parece que carga archivos por esx pero no muestra nada en pantalla
+
 ---Fin Mejoras---
 
 
@@ -310,3 +314,9 @@ Con SDL por ejemplo también sucede
 -ZRCP no envia teclas extendidas cuando se pulsan desde slave: por ejemplo QL y teclas []
 
 -ZENG para msx ¿no? se leen los cursores en destino cuando se pulsan desde slave
+
+-gac debug con condactos y paso a paso
+- Emulación trs 80?
+
+-quiza que se permita ventanas que puedan moverse y estar parte fuera de rango visible. mientras origen ventana este dentro de rango,
+el resto puede salir fuera -> comprobar al hacer print y putpixel que no sale fuera
